-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.1.2, Qt Creator 3.2.0-beta1, Qt Creator 3.3.0-beta1
-
None
-
059cfde67737fb1d0d1a4c46ee62a387a07ca0b4
template <typename T>
struct Base
{
T t;
};
struct Foo
{
int bar;
};
template <typename T1 = Foo>
struct Derived : Base<T1>
{
};
int main()
{
Derived<> foo;
foo.t.
return 0;
}
| For Gerrit Dashboard: QTCREATORBUG-12606 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 89036,5 | C++: template base class and default argument for template class | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |